--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,8 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.2.2",
     "chart.js": "^4.1.2",
-    "luxon": "^3.2.1",
+    "chartjs-adapter-luxon": "^1.3.1",
+    "luxon": "^3.3.0",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.1.0",
     "react-dom": "^18.2.0",
