--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,9 +12,11 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.2.2",
+    "better-react-mathjax": "^2.0.2",
     "chart.js": "^4.1.2",
     "chartjs-adapter-luxon": "^1.3.1",
     "luxon": "^3.3.0",
+    "mathjax": "^3.2.2",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.1.0",
     "react-dom": "^18.2.0",
