--- a/backend/SkripsiAppBackend/SkripsiAppBackend/SkripsiAppBackend.csproj
+++ b/backend/SkripsiAppBackend/SkripsiAppBackend/SkripsiAppBackend.csproj
@@ -16,6 +16,7 @@
     <PackageReference Include="jose-jwt" Version="4.1.0" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.13" />
     <PackageReference Include="Microsoft.AspNetCore.SpaServices.Extensions" Version="6.0.13" />
+    <PackageReference Include="Microsoft.Extensions.Hosting.WindowsServices" Version="6.0.1" />
     <PackageReference Include="Npgsql" Version="7.0.1" />
     <PackageReference Include="RestSharp" Version="108.0.3" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
