--- a/backend/SkripsiAppBackend/SkripsiAppBackend/SkripsiAppBackend.csproj
+++ b/backend/SkripsiAppBackend/SkripsiAppBackend/SkripsiAppBackend.csproj
@@ -1,9 +1,10 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <RunPostBuildEvent>Always</RunPostBuildEvent>
   </PropertyGroup>
 
   <ItemGroup>
@@ -21,5 +22,9 @@
     <PackageReference Include="RestSharp" Version="108.0.3" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
   </ItemGroup>
+
+  <Target Name="PostBuild" AfterTargets="PostBuildEvent">
+    <Exec Command="PowerShell ./../BuildScripts/BuildFrontend.ps1 -TargetPath $(TargetPath)" />
+  </Target>
 
 </Project>
