Implemented CPI and SPI criteria. Added some more diagrams.

--- a/backend/SkripsiAppBackend/SkripsiAppBackend/SkripsiAppBackend.csproj
+++ b/backend/SkripsiAppBackend/SkripsiAppBackend/SkripsiAppBackend.csproj
@@ -5,6 +5,7 @@
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <RunPostBuildEvent>Always</RunPostBuildEvent>
+    <IsTransformWebConfigDisabled>true</IsTransformWebConfigDisabled>
   </PropertyGroup>
 
   <ItemGroup>
@@ -22,9 +23,5 @@
     <PackageReference Include="RestSharp" Version="108.0.3" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
   </ItemGroup>
-
-  <Target Name="PostBuild" AfterTargets="PostBuildEvent">
-    <Exec Command="PowerShell ./../BuildScripts/BuildFrontend.ps1 -TargetPath $(TargetPath)" />
-  </Target>
 
 </Project>
